--- a/Gum/XnaGum.csproj
+++ b/Gum/XnaGum.csproj
@@ -72,15 +72,15 @@
     <Compile Include="HelperExtensions.cs" />
     <Compile Include="JsonTileSheet.cs" />
     <Compile Include="KeyEventArgs.cs" />
-    <Compile Include="Layout\DockLayout.cs" />
-    <Compile Include="Layout\Layout.cs" />
-    <Compile Include="Layout\RectangleExtension.cs" />
+    <Compile Include="Layout.cs" />
+    <Compile Include="RectangleExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Root.cs" />
     <Compile Include="TextFieldLogic.cs" />
     <Compile Include="TextureAtlasCompiler.cs" />
     <Compile Include="MousePointer.cs" />
     <Compile Include="TileReference.cs" />
+    <Compile Include="Enums.cs" />
     <Compile Include="Widget.cs" />
     <Compile Include="Widgets\CheckBox.cs" />
     <Compile Include="Widgets\ComboBox.cs" />
