--- a/Gum/MonoGum.csproj
+++ b/Gum/MonoGum.csproj
@@ -21,7 +21,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Mono\Windows\x86\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;WINDOWS</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;GEMMONO</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -30,7 +30,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Mono\Windows\x86\Release\</OutputPath>
-    <DefineConstants>TRACE;WINDOWS</DefineConstants>
+    <DefineConstants>TRACE;GEMMONO</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -42,6 +42,7 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="InputEventArgs.cs" />
     <Compile Include="Layout.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="Geo\Basics.cs" />
@@ -52,7 +53,6 @@
     <Compile Include="Geo\TileSheet.cs" />
     <Compile Include="HelperExtensions.cs" />
     <Compile Include="JsonTileSheet.cs" />
-    <Compile Include="KeyEventArgs.cs" />
     <Compile Include="MousePointer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RectangleExtension.cs" />
@@ -63,6 +63,7 @@
     <Compile Include="Widget.cs" />
     <Compile Include="Widgets\CheckBox.cs" />
     <Compile Include="Widgets\ComboBox.cs" />
+    <Compile Include="Widgets\TextGrid.cs" />
     <Compile Include="Widgets\EditableTextField.cs" />
     <Compile Include="Widgets\ListView.cs" />
     <Compile Include="Widgets\VerticalScrollBar.cs" />
