--- a/Gum/XnaGum.csproj
+++ b/Gum/XnaGum.csproj
@@ -22,7 +22,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\xna\x86\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;WINDOWS</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;GEMXNA</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NoStdLib>true</NoStdLib>
@@ -34,7 +34,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\xna\x86\Release\</OutputPath>
-    <DefineConstants>TRACE;WINDOWS</DefineConstants>
+    <DefineConstants>TRACE;GEMXNA</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NoStdLib>true</NoStdLib>
@@ -71,7 +71,7 @@
     <Compile Include="Geo\TileSheet.cs" />
     <Compile Include="HelperExtensions.cs" />
     <Compile Include="JsonTileSheet.cs" />
-    <Compile Include="KeyEventArgs.cs" />
+    <Compile Include="InputEventArgs.cs" />
     <Compile Include="Layout.cs" />
     <Compile Include="RectangleExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
