--- a/Gum/MonoGum.csproj
+++ b/Gum/MonoGum.csproj
@@ -56,6 +56,7 @@
     <Compile Include="MousePointer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RectangleExtension.cs" />
+    <Compile Include="RenderData.cs" />
     <Compile Include="Root.cs" />
     <Compile Include="TextFieldLogic.cs" />
     <Compile Include="TextureAtlasCompiler.cs" />
