--- a/Gum/XnaGum.csproj
+++ b/Gum/XnaGum.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Layout.cs" />
     <Compile Include="RectangleExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RenderData.cs" />
     <Compile Include="Root.cs" />
     <Compile Include="TextFieldLogic.cs" />
     <Compile Include="TextureAtlasCompiler.cs" />
