Tab Panel, some property changed events on checkboxes and text fields.

--- a/Demo/XnaDemo.csproj
+++ b/Demo/XnaDemo.csproj
@@ -76,6 +76,7 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TabDialog.cs" />
     <Compile Include="DemoDialog.cs" />
     <Compile Include="GumInputMapper.cs" />
     <Compile Include="Main.cs" />
