--- a/Gum/MonoGum.csproj
+++ b/Gum/MonoGum.csproj
@@ -24,6 +24,7 @@
     <DefineConstants>TRACE;DEBUG;GEMMONO</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -64,6 +65,7 @@
     <Compile Include="Widget.cs" />
     <Compile Include="Widgets\CheckBox.cs" />
     <Compile Include="Widgets\ComboBox.cs" />
+    <Compile Include="Widgets\TabPanel.cs" />
     <Compile Include="Widgets\TextGrid.cs" />
     <Compile Include="Widgets\EditableTextField.cs" />
     <Compile Include="Widgets\ListView.cs" />
