--- a/Gum/XnaGum.csproj
+++ b/Gum/XnaGum.csproj
@@ -86,7 +86,9 @@
     <Compile Include="Widgets\CheckBox.cs" />
     <Compile Include="Widgets\ComboBox.cs" />
     <Compile Include="Widgets\EditableTextField.cs" />
+    <Compile Include="Widgets\TabPanel.cs" />
     <Compile Include="Widgets\ListView.cs" />
+    <Compile Include="Widgets\TextGrid.cs" />
     <Compile Include="Widgets\VerticalScrollBar.cs" />
   </ItemGroup>
   <ItemGroup>
