--- a/Gum/MonoGum.csproj
+++ b/Gum/MonoGum.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Geo\TileSheet.cs" />
     <Compile Include="HelperExtensions.cs" />
     <Compile Include="JsonTileSheet.cs" />
+    <Compile Include="Margin.cs" />
     <Compile Include="MousePointer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RectangleExtension.cs" />
@@ -65,6 +66,7 @@
     <Compile Include="Widget.cs" />
     <Compile Include="Widgets\CheckBox.cs" />
     <Compile Include="Widgets\ComboBox.cs" />
+    <Compile Include="Widgets\HorizontalFloatSlider.cs" />
     <Compile Include="Widgets\TabPanel.cs" />
     <Compile Include="Widgets\TextGrid.cs" />
     <Compile Include="Widgets\EditableTextField.cs" />
