--- a/Gum/MonoGum.csproj
+++ b/Gum/MonoGum.csproj
@@ -43,6 +43,8 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Geo\ITileSheet.cs" />
+    <Compile Include="Geo\VariableWidthFont.cs" />
     <Compile Include="InputEventArgs.cs" />
     <Compile Include="Layout.cs" />
     <Compile Include="Enums.cs" />
