--- a/Gum/MonoGum.csproj
+++ b/Gum/MonoGum.csproj
@@ -47,6 +47,9 @@
     <Compile Include="Geo\ITileSheet.cs" />
     <Compile Include="Geo\VariableWidthFont.cs" />
     <Compile Include="InputEventArgs.cs" />
+    <Compile Include="Input\Input.cs" />
+    <Compile Include="Input\InputMapper.cs" />
+    <Compile Include="Input\MessageFilter.cs" />
     <Compile Include="Layout.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="Geo\Basics.cs" />
@@ -87,6 +90,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
