--- a/Gum/XnaGum.csproj
+++ b/Gum/XnaGum.csproj
@@ -53,6 +53,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
@@ -73,6 +74,9 @@
     <Compile Include="Geo\TileSheet.cs" />
     <Compile Include="Geo\VariableWidthFont.cs" />
     <Compile Include="HelperExtensions.cs" />
+    <Compile Include="Input\Input.cs" />
+    <Compile Include="Input\InputMapper.cs" />
+    <Compile Include="Input\MessageFilter.cs" />
     <Compile Include="JsonTileSheet.cs" />
     <Compile Include="InputEventArgs.cs" />
     <Compile Include="Layout.cs" />
