Borders that tile instead of stretching

--- a/Demo/MonoDemo.csproj
+++ b/Demo/MonoDemo.csproj
@@ -42,6 +42,7 @@
     <StartupObject>GemGuiTest.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="BorderTilingDialog.cs" />
     <Compile Include="DemoDialog.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Program.cs" />
