--- a/Demo/XnaDemo.csproj
+++ b/Demo/XnaDemo.csproj
@@ -76,6 +76,8 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BorderTilingDialog.cs" />
+    <Compile Include="PopupInPopupDialog.cs" />
     <Compile Include="TabDialog.cs" />
     <Compile Include="DemoDialog.cs" />
     <Compile Include="Main.cs" />
